--- a/CurrencyConverter/Presentation/CurrencyRatesViewController/Views/CurrencyRateCell.xib
+++ b/CurrencyConverter/Presentation/CurrencyRatesViewController/Views/CurrencyRateCell.xib
@@ -31,7 +31,7 @@
                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="nwl-fp-Td5">
                     <rect key="frame" x="16" y="15" width="308" height="41"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="EU" translatesAutoresizingMaskIntoConstraints="NO" id="f7O-b2-DeV">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="f7O-b2-DeV">
                             <rect key="frame" x="0.0" y="0.5" width="40" height="40"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
@@ -86,7 +86,4 @@
             <point key="canvasLocation" x="57.5" y="53.5"/>
         </view>
     </objects>
-    <resources>
-        <image name="EU" width="21" height="15"/>
-    </resources>
 </document>
